--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | News homepage</title>
-    <link rel="stylesheet" href="/assets/styles/reset.css" />
-    <link rel="stylesheet" href="/assets/styles/styles.css" />
+    <link rel="stylesheet" href="assets/styles/reset.css" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
   </head>
   <body>
     <header role="banner">
