--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | News homepage</title>
-    <link rel="stylesheet" href="assets/styles/reset.css" />
-    <link rel="stylesheet" href="assets/styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/reset.css" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
     <header role="banner">
       <nav class="navbar" aria-label="Main navigation">
-        <img src="/assets/images/logo.svg" alt="Website Logo" />
+        <img src="./assets/images/logo.svg" alt="Website Logo" />
         <ul class="navbar-list">
           <li><a href="#">Home</a></li>
           <li><a href="#">New</a></li>
@@ -29,11 +29,11 @@
           aria-expanded="false"
           aria-controls="navbar-dialog"
         >
-          <img src="/assets/images/icon-menu.svg" alt="Open menu" />
+          <img src="./assets/images/icon-menu.svg" alt="Open menu" />
         </button>
         <dialog class="navbar-dialog" id="navbar-dialog">
           <button class="dialog-toggle" aria-label="Close navigation">
-            <img src="/assets/images/icon-menu-close.svg" alt="Close menu" />
+            <img src="./assets/images/icon-menu-close.svg" alt="Close menu" />
           </button>
           <ul class="dialog-list">
             <li><a href="#">Home</a></li>
@@ -52,11 +52,11 @@
           <div class="banner" style="grid-area: banner">
             <picture>
               <source
-                srcset="/assets/images/image-web-3-desktop.jpg"
+                srcset="./assets/images/image-web-3-desktop.jpg"
                 media="(min-width: 500px)"
               />
               <img
-                src="/assets/images/image-web-3-mobile.jpg"
+                src="./assets/images/image-web-3-mobile.jpg"
                 alt="Web 3.0 Concept"
               />
             </picture>
@@ -99,7 +99,7 @@
           </div>
           <div class="content-item">
             <div class="content-image">
-              <img src="/assets/images/image-retro-pcs.jpg" alt="Retro PCs" />
+              <img src="./assets/images/image-retro-pcs.jpg" alt="Retro PCs" />
             </div>
             <div class="content-text">
               <span>01</span>
@@ -110,7 +110,7 @@
           <div class="content-item">
             <div class="content-image">
               <img
-                src="/assets/images/image-top-laptops.jpg"
+                src="./assets/images/image-top-laptops.jpg"
                 alt="Top laptops"
               />
             </div>
@@ -123,7 +123,7 @@
           <div class="content-item">
             <div class="content-image">
               <img
-                src="/assets/images/image-gaming-growth.jpg"
+                src="./assets/images/image-gaming-growth.jpg"
                 alt="Gaming industry growth"
               />
             </div>
@@ -137,6 +137,6 @@
       </section>
     </main>
 
-    <script src="/assets/scripts/menu.js"></script>
+    <script src="./assets/scripts/menu.js"></script>
   </body>
 </html>
